--- a/index.html
+++ b/index.html
@@ -1,100 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="uk">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Web Project</title>
-<link rel="stylesheet" href="styles/style.css" type="text/css"/>
-   </head>
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Кольоровий текст</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>This is my domashka for mr. Kostyantyn</h1>
-<h1>The homework itself below</h1>
-<h3>Not so close similar Projects:</h3>
 
-<ol>
-<li> <a class="try1" href="https://www.google.com">Literally Google</a></li>
-<li><a class="try2" href="https://bybit.com">Place to buy TON when it's 7$ and sell when stupid Durov's in a jail</a></li>
-<li><a class="try3" href="https://steamcommunity.com">Here you can scam children</a></li>
-</ol>
+    <header>
+        <h1 class="colored-text">КН-23 Новини</h1>
+        <nav>
+            <a href="https://www.w3schools.com/html/html_links.asp" class="colored-link">Інститут</a>
+            <a href="https://www.w3schools.com/html/html_links.asp" class="colored-link">Контакти</a>
+        </nav>
+    </header>
 
+    <aside>
+        <h2 class="colored-text">Розділи:</h2>
+        <ul>
+            <li><a href="https://www.w3schools.com/html/html_links.asp" class="colored-link">КНщики</a></li>
+            <li><a href="https://www.w3schools.com/html/html_links.asp" class="colored-link">Менедж</a></li>
+            <li><a href="https://www.w3schools.com/html/html_links.asp" class="colored-link">ПМщики</a></li>
+        </ul>
+    </aside>
 
-<h3>Images:</h3>
+    <main>
+        <section>
+            <h2 class="colored-text">Класне зображення:</h2>
+            <p class="colored-text">(Ні, його не буде)</p>
+        </section>
 
+        <article>
+            <h2 class="colored-text">Новина 1</h2>
+            <p class="colored-text">Сьогодні о 8:00 Святік прокинувся</p>
+        </article>
 
-<img src="images/help.jpg" width="200" alt="Just Steam"/>
+        <article>
+            <h2 class="colored-text">Новина 2</h2>
+            <p class="colored-text">О десятій Святіка було помічено в десятій аудиторії</p>
+        </article>
 
+        <article>
+            <h2 class="colored-text">Новина 3</h2>
+            <p class="colored-text">Через півтори години Святіка більше ніхто там не бачив. Ось так от</p>
+        </article>
+    </main>
 
-    <h3>About This Project</h3>
-    <p>I dont know, that's just a homework. <strong>Homework at all.</strong> here I'm trying to figure out how all that situation works for <i>hell 1.5 hours.</i></p>
-
-
-    <h4>Here's the tags i've used for that evil maschine to work:</h4>
-<table>
-    <thead>
-
-<tr>
-<th>Tag</th>
-<th>What is that</th>
- </tr>
-</thead>
-<tbody>
-<tr>
-<td>h1-h6</td>
-<td>Zagolovki ta yih vajlyvist</td>
-</tr>
-<tr>
-<td>p</td>
-<td>Do a paragraph</td>
-</tr>
-<tr>
- <td>a</td>
-<td>For scam links</td>
-</tr>
-<tr>
-<td>oi</td>
- <td>For lists</td>
-</tr>
-
-<tr>
-<td>img</td>
-<td>For images</td>
-</tr>
-
-<tr>
- <td>tr, td, thread, tbody, i tak dali.</td>
-<td>Things to make that cubic frame</td>
-</tr>
-    </tbody>
-    </table>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<blockquote>
-"Da ya sam hz kak eto delat, to be honest" - Starosta <strong>:</strong>D
-</blockquote>
-
-<h4>Postavte 5, ya staravsy, thank you</h4>
-
+    <footer>
+        <p class="colored-text"> 2024. No any right was reserved due to being just a homework</p>
+        <nav>
+            <a href="https://www.w3schools.com/html/html_links.asp" class="colored-link">Про нас</a>
+            <a href="https://www.w3schools.com/html/html_links.asp" class="colored-link">Політика конфіденційності</a>
+        </nav>
+    </footer>
 
 </body>
 </html>
